exports[`inline backend passes custom class names 1`] = `
<button
  className="Button___1 custom-class-name"
  style={
    Object {
      "padding": 10,
    }
  } />
`;

exports[`inline backend renders style attribute and debug class name 1`] = `
<button
  className="Button___0"
  style={
    Object {
      "padding": 10,
    }
  } />
`;

exports[`inline backend renders the alt styles and debug class 1`] = `
<button
  className="Button___2 red___2"
  style={
    Object {
      "backgroundColor": "red",
      "padding": 10,
    }
  } />
`;

exports[`inline backend renders the combined styles for extended components 1`] = `
<button
  className="RoundButton___3"
  style={
    Object {
      "borderRadius": 10,
      "padding": 10,
    }
  } />
`;
